--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ button {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 .container {
@@ -70,8 +70,8 @@ p {
     bottom: -50px;
     left: 50%;
     transform: translateX(-50%);
-    width: 300px;
-    height: 300px;
+    width: 175px;
+    height: 170px;
    
     border: 5px solid white;
 }
